deps/v8/test/message/fail/class-fields-private-undefined-inner-class.out
*%(basename)s:10: SyntaxError: Undefined private field #b: must be declared in an enclosing class
      getA() { return this.#b; }
                          ^
SyntaxError: Undefined private field #b: must be declared in an enclosing class
